complete release, xorstr, etc.
please end my fucking suffering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ file(GLOB sources
         "src/entry/*.cpp"
         "src/entry/*.h"
         "src/modules/*.cpp"
-        "src/modules/*.h")
+        "src/modules/*.h"
+        "src/includes/*.hpp")
 
 
 add_executable(satireFSUTIL ${sources} src/dx11/render/render.cpp src/dx11/render/render.h src/entry/main.h src/dx11/gui/gui.cpp src/dx11/gui/gui.h src/modules/modules.cpp src/modules/modules.h)
